[package]
name = "par_lgp2"
version = "0.1.0"
authors = ["Kyle Nickerson <kln870@mun.ca>"]

[dependencies]
rand = "0.5"
time = "*"
csv = "1.0.0-beta.5"

indexmap = "1.0.1"


#serde = "1.0"
#serde_derive = "1.0"
#
## serde_json is just for the example, not required in general
#serde_json = "1.0"